# tortoise-data-migration

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: code-quality.yaml  codeql-analysis.yml  coverage.yaml  release.yaml  test.yaml  tests.yaml
data_migration/: __init__.py
docs/examples/basic/: README.md  main.py  pyproject.toml
docs/examples/basic/app/: models.py
docs/examples/basic/data_migrations/: 002_more_countries.py
docs/examples/complete/: README.md  main.py  pyproject.toml
docs/examples/complete/my_data_migrations/: 001_basic_countries.py
tests/: __init__.py  models.py  test_model.py  test_upgrade.py
tests/data_migrations/: 001_initial_values.py  002_more_values.py
tests/wrong_data_migrations/: 001_fail_with_exception.py
tortoise_data_migration/: __init__.py  exception.py  models.py
