[project]
name = "tortoise-data-migration"
version = "0.1.10"
description = "Tortoise migrations for data, not structure"
authors = [
    {name = "Guillermo Manzato", email = "manzato@ekumenlabs.com"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "Topic :: Database",
    "License :: OSI Approved :: MIT License",


]
dependencies = [
    "tortoise-orm~=0.17",
]
requires-python = ">=3.8"
dynamic = ["classifiers"]
license = {text = "MIT"}
readme = "README.md"

[project.urls]
homepage = "https://github.com/Ekumen-OS/tortoise-data-migration"
Repository = "https://github.com/Ekumen-OS/tortoise-data-migration"
Documentation = "https://github.com/Ekumen-OS/tortoise-data-migration"

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"

[tool]
[tool.pdm]

[tool.pdm.dev-dependencies]
dev = [
    "coverage~=5.5",
]

[flake8]
max-line-length = 88
