[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Guillermo Manzato", email = "manzato@ekumenlabs.com"},
]
dependencies = [
    "tortoise-data-migration~=0.1",
    "tortoise-orm~=0.17",
]
requires-python = ">=3.8"
dynamic = ["classifiers"]
license = {text = "MIT"}

[project.urls]
homepage = ""

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"

[tool]
[tool.pdm]
